# DMS-Pi-Dash

./: .gitignore  CMakeLists.txt  Gauge.cpp  Gauge.h  GaugeCluster.cpp  GaugeCluster.h  Main.cpp  Makefile  Megasquirt_simplified_dash_broadcast.c  Megasquirt_simplified_dash_broadcast.h  PiDash.cpp  PiDash.h  makefile
can/: CanDecoder.cpp  CanDecoder.h
env/: Env.cpp  Env.h  config.txt.std
gui/: Clock.cpp  Clock.h  Gauge.cpp  Gauge.h  GaugeCluster.cpp  GaugeCluster.h  HGaugeBar.cpp  HGaugeBar.h  RPMGauge.cpp  RPMGauge.h
logging/: Logger.cpp  Logger.h
styles/: styles.css
